--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,1 @@
-<ul>
-    <li><a [routerLink]="['/']">list</a></li>
-    <li><a [routerLink]="['/detail', 1]">detail 1</a></li>
-    <li><a [routerLink]="['/detail', 2]">detail 2</a></li>
-    <li><a [routerLink]="['/detail', 3]">detail 3</a></li>
-    <li><a [routerLink]="['/detail', 4]">detail 4</a></li>
-    <li><a [routerLink]="['/detail', 5]">detail 5</a></li>
-    <li><a [routerLink]="['/detail', 6]">detail 6</a></li>
-    <li><a [routerLink]="['/detail', 7]">detail 7</a></li>
-</ul>
-
-<button (click)="flushList()">Flush list</button>
-<button (click)="flushOnce(1)">Flush Detail 1</button>
-<button (click)="flushOnce(2)">Flush Detail 2</button>
-<button (click)="flushOnce(3)">Flush Detail 3</button>
-
-<router-outlet></router-outlet>
+<app-nav></app-nav>
