--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -28,13 +28,13 @@
             <span>ngsw-test</span>
         </mat-toolbar>
         <section class="main">
-            <button mat-raised-button (click)="flushList()">Flush list</button>
-            <button mat-raised-button (click)="flushOnce(1)">Flush Detail 1</button>
-            <button mat-raised-button (click)="flushOnce(2)">Flush Detail 2</button>
-            <button mat-raised-button (click)="flushOnce(3)">Flush Detail 3</button>
-            <button mat-raised-button (click)="flushOnce(4)">Flush Detail 3</button>
-            <button mat-raised-button (click)="flushOnce(5)">Flush Detail 3</button>
-            <button mat-raised-button (click)="flushOnce(6)">Flush Detail 3</button>
+            <button mat-raised-button (click)="cache.flushList()">Flush list</button>
+            <button mat-raised-button (click)="cache.flushOne(1)">Flush Detail 1</button>
+            <button mat-raised-button (click)="cache.flushOne(2)">Flush Detail 2</button>
+            <button mat-raised-button (click)="cache.flushOne(3)">Flush Detail 3</button>
+            <button mat-raised-button (click)="cache.flushOne(4)">Flush Detail 3</button>
+            <button mat-raised-button (click)="cache.flushOne(5)">Flush Detail 3</button>
+            <button mat-raised-button (click)="cache.flushOne(6)">Flush Detail 3</button>
             <router-outlet></router-outlet>
         </section>
     </mat-sidenav-content>
